team8-app/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app: sms-spam-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sms
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
      - path: /actuator/prometheus
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-frontend
            port:
              number: 8080
